Implementação do switch...case no método executarComando()